ajustes nos codes smells